--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,9 +10,18 @@
     <style name="cardYellowText" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+    </style>
+    <style name="cardHeaderText" parent="">
+        <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">@font/roboto_bold</item>
     </style>
     <style name="cardBlackText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/roboto_light</item>
+    </style>
+    <style name="cardInfoText" parent="TextAppearance.AppCompat">
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">@font/roboto_light</item>
