--- a/app/src/main/res/layout/fragment_view_positions_to_do.xml
+++ b/app/src/main/res/layout/fragment_view_positions_to_do.xml
@@ -43,6 +43,7 @@
             app:layout_constraintTop_toBottomOf="@+id/todoSpinner" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvToDo"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
